name:              geekdarling2
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Geekdarling.Application
                     Geekdarling.Foundation
                     Geekdarling.Functor
                     Geekdarling.Import
                     Geekdarling.Model
                     Geekdarling.Settings
                     Geekdarling.Settings.StaticFiles
                     Geekdarling.Settings.Development
                     Geekdarling.Util
                     Geekdarling.Handler.Home
                     Geekdarling.Handler.Index
                     Geekdarling.Handler.Profile
                     Geekdarling.Handler.ProfileOther

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -fno-warn-unused-do-bind
    else
        ghc-options:   -Wall -O2 -fno-warn-unused-do-bind

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4
                 , yesod                         >= 1.2.5
                 , yesod-core                    >= 1.2.12
                 , yesod-auth                    >= 1.3
                 , yesod-static                  >= 1.2
                 , yesod-form                    >= 1.3
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , persistent                    >= 1.3
                 , persistent-postgresql         >= 1.3
                 , persistent-template           >= 1.3
                 , template-haskell
                 , shakespeare                   >= 2.0
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 3.0
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 3.0
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.1.4
                 , wai-logger                    >= 2.1
                 , time
                 , base64-bytestring

executable         geekdarling2
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , geekdarling2
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , geekdarling2
                 , yesod-test >= 1.2
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
